// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - FIRST - beforeEnter 1`] = `1`;

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - FIRST - thunk 1`] = `1`;

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`redirect on server not dispatched; instead redirect info returned: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "init",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": true,
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - response 1`] = `
Object {
  "location": Object {
    "kind": "replace",
    "status": 302,
    "url": "/redirected",
  },
  "status": 302,
  "type": "REDIRECTED",
  "url": "/redirected",
}
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": true,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`redirect on server not dispatched; instead redirect info returned: firstRoute - /first - 1 - title 1`] = `""`;
